name:                haskell-snap-example
version:             0.1.0.0
synopsis:            Example of a SNAP webserver
description:         Please see README.md
homepage:            https://github.com/matthewfranglen/haskell-snap-example#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Matthew Franglen
maintainer:          matthew@franglen.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-snap-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, snap, snap-core, snap-server, bytestring
